--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
+
     <link rel="preload" href="css/preload.css"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
@@ -29,12 +30,12 @@
 		<div class="logo">
 			<img src="img/logo.png">
 		</div>
-		<div class="contacts_lang clearfix animate slideInRight">
+		<div class="contacts_lang clearfix">
 			<div class="number clearfix">
 				<img class="number_icon"src="img/phone.png">
 				<div class="number_phone">044 207 43 32</div>
 			</div>
-			<div class="languages animate slideInRight">
+			<div class="languages">
 				<ul class="languages_count clearfix">
 					<li class="lang_item"><a class="lang_item_link" href="#">ru</a></li>
 					<li class="lang_item"><a class="lang_item_link" href="#">eng</a></li>
@@ -48,11 +49,11 @@
 		<ul class="slider-wrapper animate slideInRight fade">
 		<li class="slide current-slide">
 			<img src="img/banner.png" title="" alt="">
-			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		<li class="slide">
 			<img src="img/banner_slide2.png" title="" alt="">
-			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		</ul>
 		
@@ -146,7 +147,7 @@
 				</div>
 			</div>
 
-			<div class="skills_item clear">
+			<div class="skills_item">
 			<img class="skills_item_icon" src="img/4.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Ввод данных</h4>
@@ -170,7 +171,7 @@
 				</div>
 			</div>
 
-			<div class="skills_item clear">
+			<div class="skills_item">
 				<img class="skills_item_icon" src="img/7.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Справочники персональных данных</h4>
@@ -250,14 +251,14 @@
 	<div class="block_eight ">
 		<div class="wrapper block_eight_container">
 		<h3 class="main_content_head">Наши клиенты</h3>
-			<ul class="card_container clearfix">
+			<ul class="card_container">
 				<li class="card_item"><a class="card_link" href=""><img src="img/card1.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card22.png"></a></li>
-				<li class="card_item clear"><a class="card_link" href=""><img src="img/card1.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card1.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
@@ -295,8 +296,8 @@
 				<li class="contacts_item"><img class="contacts_item_icon" src="img/mail_white.png">info@uac-archive.com.ua</li>
 			</ul>
 			<ul class="soc_icon">
-				<li class="soc_icon_item"><a class="soc_icon_link "href="#"><img src="img/fb.png"></a></li>
-				<li class="soc_icon_item"><a class="soc_icon_link "href="#"><img src="img/linkedin.png"></a></li>
+				<li class="soc_icon_item"><a class="soc_icon_link" href="#"><img src="img/fb.png"></a></li>
+				<li class="soc_icon_item"><a class="soc_icon_link" href="#"><img src="img/linkedin.png"></a></li>
 			</ul>
 		</div>
 		<div class="col_three">
