--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="preload" href="css/preload.css"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
@@ -289,13 +289,13 @@
 			<img src="img/Logo_UAC_white.png">
 			<div class="col_one_text">Ваш бизнес и Ваши потребносВаш бизнес и Ваши потребности это всегда больше чем готовые «коробочные» решения! Позвольте нам разработать для Вас персонифицированное предложение по обработке данных Вашей программы лояльности! Мы гарантируем, что это будет <span>ДЕШЕВЛЕ</span> и <span>КАЧЕСТВЕННЕЕ</span>, чем то, с чем Вы сталкиваетесь сейчас!</div>
 		</div>
-		<div class="col_two">
+		<div class="col_two clearfix">
 			<ul class="contacts clearfix">
 				<li class="contacts_item"><img class="contacts_item_icon" src="img/map_white.png">Киев, ул. Ленина 16</li>
 				<li class="contacts_item"><img class="contacts_item_icon" src="img/phone_white.png">044 207 43 32</li>
 				<li class="contacts_item"><img class="contacts_item_icon" src="img/mail_white.png">info@uac-archive.com.ua</li>
 			</ul>
-			<ul class="soc_icon">
+			<ul class="soc_icon clearfix">
 				<li class="soc_icon_item"><a class="soc_icon_link" href="#"><img src="img/fb.png"></a></li>
 				<li class="soc_icon_item"><a class="soc_icon_link" href="#"><img src="img/linkedin.png"></a></li>
 			</ul>
