--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
     <link rel="preload" href="css/preload.css"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
