--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-<!--<meta name="viewport" content="width=device-width,initial-scale=1.0">-->
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="preload" href="css/preload.css"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
@@ -14,7 +14,6 @@
     <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.7/jquery.viewportchecker.min.js"></script>
-    <script type="text/javascript" src="js/jquery.bxslider.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
@@ -77,9 +76,6 @@
 		<div class="carousel_container">
 		<h3 class="main_content_head">Наши клиенты</h3>
 			<ul class="slider1 carousel_container_list clearfix">
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_purple.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_red.png"></a></li>
 				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
 				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_purple.png"></a></li>
 				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_red.png"></a></li>
