--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -6,17 +6,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="preload" href="css/preload.css"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css">
-    <!-- <link rel="stylesheet" type="text/css" href="css/slick-theme.css"> -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.7/jquery.viewportchecker.min.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
     <script type="text/javascript" src="js/jquery.bxslider.js"></script>
     <script type="text/javascript" src="js/jquery.validate.min.js"></script>
 </head>
@@ -58,7 +55,7 @@
 	<div class="sub_slider">
 		<ul class="sub_slider-wrapper fadeslider">
 			<li class="slide sub_slider_item animated slideInDown">Обработка Программы Лояльности Вашей сети!</li>
-			<li class="slide sub_slider_item animated slideInDown">Обработка Программы Лояльности Вашей сети!1</li>
+			<li class="slide sub_slider_item animated slideInDown">Создание базы данных клиентов и обработка анкет!</li>
 		</ul>
 	</div>	
 	<div class="main_content">
@@ -72,10 +69,10 @@
 <div class="sub-carousel sub-carousel_container">
 		<div class="carousel_container">
 		<h3 class="main_content_head">Наши клиенты</h3>
-			<ul class="slider1 carousel_container_list clearfix">
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_purple.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_red.png"></a></li>
+			<ul class="carousel_container_list clearfix">
+				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.hranenie.com.ua/index.php/ru/"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.spisanie.com.ua"><img src="img/Adidas_original_purple.png"></a></li>
+				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.scandata.com.ua"><img src="img/Adidas_original_red.png"></a></li>
 			</ul>
 		</div>
 </div>
@@ -99,8 +96,8 @@
 		<div class=" skills_container clearfix">
 
 			<div class="skills_item">
-				<div class="skills_text">
 				<img class="skills_item_icon" src="img/1.png">
+				<div class="skills_text">
 				<h4 class="skills_item_head">Сбор бумажных анкет на торговых точках</h4>
 				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
 				</div>
@@ -168,7 +165,7 @@
 		<div class="wrapper block_three">
 			<div class="block_three_content">
 				<div class="text">Наши клиенты получают готовую базу персональных данных в электронном виде для дальнейшей маркетинговой активности.</div>
-				<div class="block_three_btn"><a class="block_three_btn_link" href="#">СВЯЗАТСЯ С НАМИ</a></div>
+				<div class="block_three_btn"><a class="block_three_btn_link" href="#footer">СВЯЗАТСЯ С НАМИ</a></div>
 			</div>
 		</div>
 	</div>
@@ -208,7 +205,7 @@
 			</div>
 			<div class="video_container">
 				<h3 class="block_six_head">Название видео ролика</h3>
-				<div class="video"></div>
+				<div class="video"><iframe width="420" height="315" src="https://www.youtube.com/embed/L2D0zr_P0Ps" frameborder="0" allowfullscreen></iframe></div>
 			</div>
 			
 		</div>
@@ -282,7 +279,7 @@
 	</div>
 </main>
 <footer>
-	<div class="wrapper footer_container clearfix">
+	<div class="wrapper footer_container clearfix" id="footer">
 		<div class="col_one">
 			<img src="img/Logo_UAC_white.png">
 			<div class="col_one_text">Ваш бизнес и Ваши потребносВаш бизнес и Ваши потребности это всегда больше чем готовые «коробочные» решения! Позвольте нам разработать для Вас персонифицированное предложение по обработке данных Вашей программы лояльности! Мы гарантируем, что это будет <span>ДЕШЕВЛЕ</span> и <span>КАЧЕСТВЕННЕЕ</span>, чем то, с чем Вы сталкиваетесь сейчас!</div>
