--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -62,7 +62,7 @@
 		<div class="wrapper main_container">
 			<div class="main_content_text">
 				<h3 class="main_content_head">Украинская Архивная Компания</h3>
-				<p class="main_content_item">Является многопрофильным специализированным предприятием, которое профессионально занимается обработкой и сохранением документации в соответствии со стандартами и нормами законодательства. За 7 лет работы компания заняла лидирующие позиции в сферах архивации документов, хранения документов, уничтожения документов, оцифровки документации и создании электронных баз данных и документов.</p>
+				<div class="main_content_item">Является многопрофильным специализированным предприятием, которое профессионально занимается обработкой и сохранением документации в соответствии со стандартами и нормами законодательства. За 7 лет работы компания заняла лидирующие позиции в сферах архивации документов, хранения документов, уничтожения документов, оцифровки документации и создании электронных баз данных и документов.</div>
 			</div>
 		</div>
 	</div>
@@ -303,7 +303,7 @@
           		<textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea></br>
           		<input type="submit" class="submit_button" value="Отправить"></div>
       </form>
-      <div class="copyright">Создание и разработка сайта <a href="#">© Intellectus-studio 2016</a></div>
+      <div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">© Intellectus-studio 2016</a></div>
 		</div>
 	</div>
 	<a href="#" class="scrollup">Scroll</a>
