--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -99,7 +99,7 @@
 				<img class="skills_item_icon" src="img/1.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Сбор бумажных анкет на торговых точках</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">мы обеспечиваем сбор анкет и документов для обработки и ввода данных по любому количеству точек сбора и на любой территории. Более 1000 заборов анкет в месяц! Партии анкет попадают к нам в течении двух дней!</div>
 				</div>
 			</div>
 
@@ -107,7 +107,7 @@
 				<img class="skills_item_icon" src="img/2.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Прием анкет на обработку</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">После сбора либо получения документов мы осуществляем их централизованную приемку на наших площадях и силами наших сотрудников. Мы проверяем комплектность документов, сроки доставки, составляем реестр и опись полученных партий анкет. По необходимости мы связываемся с точками сбора для проверки отправки партии. Клиенты получают реестры.</div>
 				</div>
 			</div>
 
@@ -115,7 +115,7 @@
 				<img class="skills_item_icon" src="img/3.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Сканирование анкет</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">По  согласованию с заказчиком основная масса анкет программ лояльности сканируется на наших скоростных сканерах. Это делается для того, чтобы клиент имел возможность в любой момент времени обратиться к базе отсканированных документов без необходимости доставать из хранилища бумажный оригинал документа. Сканеры считывают штих-кода и номера карт прямо с бумажной анкеты. Автоматически создаются имена файлов для быстрого поиска.</div>
 				</div>
 			</div>
 
@@ -123,7 +123,9 @@
 			<img class="skills_item_icon" src="img/4.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Ввод данных</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">Для создания базы данных из имеющихся анкет мы используем операторов ввода данных. Операторы ввода данных создают базы по заранее определенным полям, которые должны быть извлечены из анкет. Мы работаем только со своими штатными операторами! Ежедневно и постоянно осуществляется контроль
+корректности ввода данных. Ввод данных может осуществляться как оффлайн, так и онлайн непосредственно в программу наших клиентов. Базы предоставляются клиентам в любых требуемых форматах.
+</div>
 				</div>
 			</div>
 
@@ -131,7 +133,7 @@
 				<img class="skills_item_icon" src="img/5.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Программа ввода данных</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">На основании более чем 6-ти летнего опыта обработки анкет нами была разработана и протестирована программа для ввода и обработки любых типов данных. Программа позволяет быстрый ввод данных, как на отдельном рабочем месте, так и в сети или через web-интерфейс.  Данные могут быть выгружены в любую систему, обработаны и отсортированы при помощи специального модуля аналитики. При вводе данных используются встроенные справочники данных.</div>
 				</div>
 			</div>
 
@@ -139,7 +141,7 @@
 				<img class="skills_item_icon" src="img/6.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Ввод данных маркетинговых опросов</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">Используя многолетний опыт в обработке программ лояльности, наша компания оказывает также услуги обработки маркетинговых исследований и опросов. Большой массив данных, наличие различных вариантов ответов и иногда объемные текстовые комментарии требуют особого подхода к организации и выполнению подобных проектов.</div>
 				</div>
 			</div>
 
@@ -147,7 +149,7 @@
 				<img class="skills_item_icon" src="img/7.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Справочники персональных данных</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">За время работы наша компания обработала персональные данные более 5 миллионов клиентов различных сетей! Был накоплен массив информации, который позволил создать справочники корректного ввода географических названий, имен, кличек и пород животных, марок автомобилей, адресов электронной почты и другой информации. Эти справочники позволяют свести к минимуму ошибки при вводе данных и получать базы персональных данных высочайшего качества.</div>
 				</div>
 			</div>
 
@@ -155,7 +157,9 @@
 				<img class="skills_item_icon" src="img/8.png">
 				<div class="skills_text">
 				<h4 class="skills_item_head">Упаковка и дальнейшее хранение анкет</h4>
-				<div class="skills_item_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая</div>
+				<div class="skills_item_text">После обработки документов нашими операторами сканирования и ввода данных мы
+упаковываем анкеты в архивные короба. Упаковка происходит в соответствии с реестрами партий для моментального нахождения оригинала анкеты. Упакованные анкеты размещаются на хранение в наше архивохранилище. По необходимости наши клиенты запрашивают оригиналы анкет, и мы предоставляем их в срок от 3 до 24 часов.
+</div>
 				</div>
 			</div>
 
