--- a/Domiki/index.html
+++ b/Domiki/index.html
@@ -35,11 +35,11 @@
     <div class="menu">
         <div class="menu_wrapper">
             <ul class="menu_list">
-                <li class="nav"><a class="nav_a" href="#">Галерея товаров</a></li>
-                <li class="nav"><a class="nav_a" href="#">Варианты комплектации</a></li>
-                <li class="nav"><a class="nav_a" href="#">Реализованные объекты</a></li>
-                <li class="nav"><a class="nav_a" href="#">варианты покраски</a></li>
-                <li class="nav"><a class="nav_a" href="#">Контакты</a></li>
+                <li class="nav nav_first"><a class="nav_a" href="#">Галерея товаров</a></li>
+                <li class="nav nav_second"><a class="nav_a" href="#">Варианты комплектации</a></li>
+                <li class="nav nav_third"><a class="nav_a" href="#">Реализованные объекты</a></li>
+                <li class="nav nav_fourth"><a class="nav_a" href="#">варианты покраски</a></li>
+                <li class="nav nav_fifth"><a class="nav_a" href="#">Контакты</a></li>
             </ul>
         </div>
     </div>
@@ -411,7 +411,7 @@
                     <input class="form_input" type="text" name="phone" placeholder="Введите Ваш Телефон"></br>
                     <textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea></br>
             </div>
-            <input type="submit" class="submit_button" value="Отправить">
+            <div class="submit_container"><input type="submit" class="submit_button" value="Отправить"></div>
         </div>
         </form>
         <div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">Intellectus-studio 2016</a></div>
