--- a/Domiki/index.html
+++ b/Domiki/index.html
@@ -415,6 +415,7 @@
         </div>
         </form>
         <div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">Intellectus-studio 2016</a></div>
+        <div class="lift_up"><img src="images/arrow-up-300-white.png"></div>
     </div>
 </footer>
 </body>
