--- a/Domiki/index.html
+++ b/Domiki/index.html
@@ -300,7 +300,7 @@
     </div>
 </div>
 <div class="realised_object">
-    <div class="main_header_service header_black">Варианты комплектации</div>
+    <div class="main_header_service header_black">Реализованные объекты</div>
     <div class="house_container">
         <div class="realised_object_image">
             <img src="images/play_house_1.jpg" alt="" />
