--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -175,7 +175,7 @@
 	</div>
 	<div class="block_four clearfix">
 		<div class="block_four_sub">
-			<img src="img/banner_first.png">
+			<img src="img/banner_first.jpg">
 		</div>
 		<div class="block_four_sub block_four_sub_container">
 			<div class="block_four_sub_text">Ваш бизнес и Ваши потребности это всегда больше чем готовые «коробочные» решения! Позвольте нам разработать для Вас персонифицированное предложение по обработке данных Вашей программы лояльности! Мы гарантируем, что это будет <span>ДЕШЕВЛЕ</span> и <span>КАЧЕСТВЕННЕЕ</span>, чем то, с чем Вы сталкиваетесь сейчас!
