--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -246,23 +246,23 @@
 		<div class="wrapper block_eight_container">
 		<h3 class="main_content_head">Наши клиенты</h3>
 			<ul class="card_container">
-				<li class="card_item"><a class="card_link" href=""><img src="img/card1.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card3.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card4.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card6.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card8.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card10.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card11.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card12.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card13.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card14.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card15.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card16.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card17.png"></a></li>
+				<li class="card_item"><img src="img/card1.png"></li>
+				<li class="card_item"><img src="img/card2.png"></li>
+				<li class="card_item"><img src="img/card3.png"></li>
+				<li class="card_item"><img src="img/card4.png"></li>
+				<li class="card_item"><img src="img/card5.png"></li>
+				<li class="card_item"><img src="img/card6.png"></li>
+				<li class="card_item"><img src="img/card7.png"></li>
+				<li class="card_item"><img src="img/card8.png"></li>
+				<li class="card_item"><img src="img/card9.png"></li>
+				<li class="card_item"><img src="img/card10.png"></li>
+				<li class="card_item"><img src="img/card11.png"></li>
+				<li class="card_item"><img src="img/card12.png"></li>
+				<li class="card_item"><img src="img/card13.png"></li>
+				<li class="card_item"><img src="img/card14.png"></li>
+				<li class="card_item"><img src="img/card15.png"></li>
+				<li class="card_item"><img src="img/card16.png"></li>
+				<li class="card_item"><img src="img/card17.png"></li>
 			</ul>
 		</div>
 	</div>
