--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -300,8 +300,8 @@
 			<form id="callback_form" action="" method="post">
             	<input  class="form_input name_input" type="text"  name="name" minlength="2" required placeholder="Введите Ваше Имя"></br>
             	<input  class="form_input email_input" name="email" required type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите  Email"></br>
-          		<input class="form_input" type="text" name="phone" placeholder="Введите Ваш Телефон"></br>
-          		<textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea></br>
+          		<input class="form_input" type="text" name="phone" placeholder="Введите Ваше Телефон"></br>
+          		<textarea name="comment" class="form_input_message" placeholder="Введите Ваше сообщение"></textarea></br>
           		<input type="submit" class="submit_button" value="Отправить"></div>
       </form>
       <div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">© Intellectus-studio 2016</a></div>
