--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -42,11 +42,11 @@
 		<ul class="slider-wrapper animate slideInRight fade">
 		<li class="slide current-slide">
 			<img src="img/banner.png" title="" alt="">
-			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		<li class="slide">
 			<img src="img/banner_slide2.png" title="" alt="">
-			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		</ul>
 		
