--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="js/jquery.validate.min.js"></script>
 </head>
 <body>
-<header>
+<header class="fixed_header">
 	<div class="header_main wrapper clearfix">
 		<div class="logo">
 			<img src="img/logo.png">
@@ -42,11 +42,11 @@
 		<ul class="slider-wrapper animate slideInRight fade">
 		<li class="slide current-slide">
 			<img src="img/banner.png" title="" alt="">
-			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		<li class="slide">
 			<img src="img/banner_slide2.png" title="" alt="">
-			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		</ul>
 		
@@ -299,8 +299,8 @@
 		<div class="col_three">
 			<form id="callback_form" action="" method="post">
             	<input  class="form_input name_input" type="text"  name="name" minlength="2" required placeholder="Введите Ваше Имя"></br>
-            	<input  class="form_input email_input" name="email" required type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите  Email"></br>
-          		<input class="form_input" type="text" name="phone" placeholder="Введите Ваше Телефон"></br>
+            	<input  class="form_input email_input" name="email" required type="email" pattern="[^ @]*@[^ @]*" placeholder="Введите Ваш Email"></br>
+          		<input class="form_input" type="text" name="phone" placeholder="Введите Ваш Телефон"></br>
           		<textarea name="comment" class="form_input_message" placeholder="Введите Ваше сообщение"></textarea></br>
           		<input type="submit" class="submit_button" value="Отправить"></div>
       </form>
