--- a/Domiki/index.html
+++ b/Domiki/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width,initial-scale=0.6">
-    <title>Domiki</title>
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>-->
+    <!--<meta name="viewport" content="width=device-width,initial-scale=0.6">-->
+     <title>Domiki</title>
+     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>-->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <link href="css/animate.css" rel="stylesheet" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
@@ -415,7 +415,9 @@
         </div>
         </form>
         <div class="copyright">Создание и разработка сайта <a href="http://web-intellectus.com/">Intellectus-studio 2016</a></div>
-        <div class="lift_up"><img src="images/arrow-up-300-white.png"></div>
+        <div class="scrollup_container">
+            <img id="scrollup" src="images/arrow_scroll.png" height="25" style="display: inline;">
+        </div>
     </div>
 </footer>
 </body>
