--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -68,7 +68,6 @@
 	</div>
 <div class="sub-carousel sub-carousel_container">
 		<div class="carousel_container">
-		<h3 class="main_content_head">Наши клиенты</h3>
 			<ul class="carousel_container_list clearfix">
 				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.hranenie.com.ua/index.php/ru/"><img src="img/Adidas_original.png"></a></li>
 				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.spisanie.com.ua"><img src="img/Adidas_original_purple.png"></a></li>
@@ -206,7 +205,7 @@
 			</div>
 			<div class="video_container">
 				<h3 class="block_six_head">Название видео ролика</h3>
-				<div class="video"><iframe width="420" height="315" src="https://www.youtube.com/embed/L2D0zr_P0Ps" frameborder="0" allowfullscreen></iframe></div>
+				<div class="video"><iframe src="https://www.youtube.com/embed/L2D0zr_P0Ps" frameborder="0" allowfullscreen></iframe></div>
 			</div>
 			
 		</div>
@@ -232,7 +231,7 @@
 			<div class="block_seven_solution">
 				<div class="block_seven_icon"><img src="img/attention.png"></div>
 				<div class="block_seven_solution_text">
-					<h3 class="block_seven_head">Задача</h3>
+					<h3 class="block_seven_head">Решение</h3>
 					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
 				</div>
 			</div>
@@ -271,9 +270,9 @@
 				<ul class="bxslider clearfix">
 					<li><div class="client_icon"></div>
 					<blockquote>Содержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li></li>
-					<li><div class="client_icon"></div><blockquote> blabla2ержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)222 blabla2222 blabla2222 blabla2222 blabla2222 blabla2222</blockquote></li>
-					<li><div class="client_icon"></div><blockquote>blabla33ержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)3 blabla333 blabla33 blabla33 blabla33 blabla33</blockquote></li>
-					<li><div class="client_icon"></div><blockquote>Содержержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)ит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
+					<li><div class="client_icon"></div><blockquote> blabla2ержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
+					<li><div class="client_icon"></div><blockquote>blabla33ержит слайдер с отзывами клиентов. Переключение слайдов автоматически(время не утверждено заказчиком окончательно)</blockquote></li>
+					<li><div class="client_icon"></div><blockquote>Содержержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
 				</ul>
 			</div>
 		</div>
