--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -205,7 +205,7 @@
 			</div>
 			<div class="video_container">
 				<h3 class="block_six_head">Название видео ролика</h3>
-				<div class="video"><iframe src="https://www.youtube.com/embed/L2D0zr_P0Ps" frameborder="0" allowfullscreen></iframe></div>
+				<div class="video"><iframe width="420" height="315" src="https://www.youtube.com/embed/L2D0zr_P0Ps" frameborder="0" allowfullscreen></iframe></div>
 			</div>
 			
 		</div>
