--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -40,12 +40,10 @@
 <div class="banner_static"><img src="img/Банер2.0.jpg"></div>
 	<section id="slider" class="container">
 		<ul class="slider-wrapper animate slideInRight fade">
-		<li class="slide current-slide">
-			<img src="img/Банер3.0.jpg" title="" alt="">
+		<li class="slide current-slide first_slide">
 			<!-- <div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div> -->
 		</li>
-		<li class="slide">
-			<img src="img/Банер2.0.jpg" title="" alt="">
+		<li class="slide second_slide">
 			<!-- <div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div> -->
 		</li>
 		</ul>
