--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -37,17 +37,18 @@
 	</div>
 </header>
 <main>
+<div class="banner_static"><img src="img/Банер2.0.jpg"></div>
 	<section id="slider" class="container">
-		<ul class="slider-wrapper animate slideInRight fade">
-		<li class="slide current-slide">
-			<img src="img/banner.png" title="" alt="">
-			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
-		</li>
-		<li class="slide">
-			<img src="img/banner_slide2.png" title="" alt="">
-			<div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
-		</li>
-		</ul>
+		<div class="slider-wrapper">
+		<div class="slide current-slide first_slide ">
+		<img src="img/Банер3.0.jpg">
+			<!-- <div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div> -->
+		</div>
+		<div class="slide second_slide">
+		<img src="img/Банер2.0.jpg">
+			<!-- <div class="slide_text_container animated slideInRight"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div> -->
+		</div>
+		</div>
 		
 		<ul id="control-buttons" class="control-buttons"></ul>
 	</section>
