--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -213,7 +213,7 @@
 	<div class="line"></div>
 	<div class="block_seven">
 		<div class="wrapper clearfix block_seven_container">
-			<h3 class="main_content_head">Что Вы получаете?</h3>
+			<h3 class="main_content_head">Пример реализации проекта</h3>
 			<div class="block_seven_client">
 				<div class="block_seven_icon"><img src="img/man.png"></div>
 				<div class="block_seven_client_text">
