--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -218,21 +218,21 @@
 				<div class="block_seven_icon"><img src="img/man.png"></div>
 				<div class="block_seven_client_text">
 					<h3 class="block_seven_head">Клиент</h3>
-					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
+					<div class="block_seven_text">Сеть магазинов модной одежды “COLINS”</div>
 				</div>
 			</div>
 			<div class="block_seven_task">
 				<div class="block_seven_icon"><img src="img/question.png"></div>
 				<div class="block_seven_task_text">
 					<h3 class="block_seven_head">Задача</h3>
-					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
+					<div class="block_seven_text">Организация сбора анкет программы лояльности сети и предоставление готовой базы персональных данных клиентов для дальнейшей обработки.</div>
 				</div>
 			</div>
 			<div class="block_seven_solution">
 				<div class="block_seven_icon"><img src="img/attention.png"></div>
 				<div class="block_seven_solution_text">
 					<h3 class="block_seven_head">Решение</h3>
-					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
+					<div class="block_seven_text">Сокращение затрат клиента на сбор, обработку и дальнейшее хранение анкет программ лояльности. Оптимизация бизнес-процессов внутри компании, ускорение получения готовых данных для дальнейшей работы, высвобождение собственного персонала, повышение качества данных за счет профессионального ввода и создания базы</div>
 				</div>
 			</div>
 		</div>
@@ -256,9 +256,9 @@
 				<li class="card_item"><img src="img/card12.png"></li>
 				<li class="card_item"><img src="img/card13.png"></li>
 				<li class="card_item"><img src="img/card14.png"></li>
-				<li class="card_item"><img src="img/card15.png"></li>
+				<!-- <li class="card_item"><img src="img/card15.png"></li>
 				<li class="card_item"><img src="img/card16.png"></li>
-				<li class="card_item"><img src="img/card17.png"></li>
+				<li class="card_item"><img src="img/card17.png"></li> -->
 			</ul>
 		</div>
 	</div>
@@ -282,7 +282,7 @@
 	<div class="wrapper footer_container clearfix" id="footer">
 		<div class="col_one">
 			<img src="img/Logo_UAC_white.png">
-			<div class="col_one_text">Ваш бизнес и Ваши потребносВаш бизнес и Ваши потребности это всегда больше чем готовые «коробочные» решения! Позвольте нам разработать для Вас персонифицированное предложение по обработке данных Вашей программы лояльности! Мы гарантируем, что это будет <span>ДЕШЕВЛЕ</span> и <span>КАЧЕСТВЕННЕЕ</span>, чем то, с чем Вы сталкиваетесь сейчас!</div>
+			<div class="col_one_text">Украинская Архивная Компания решает «под ключ» задачу сбора и обработки маркетинговой информации программ лояльности торговых сетей и любых иных предприятий, собирающих персональные данные своих клиентов.</div>
 		</div>
 		<div class="col_two clearfix">
 			<ul class="contacts clearfix">
