--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Українська архівна компанія</title>
+	<title>Украинская Архивная Компания</title>
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
     <script type="text/javascript" src="js/jquery.js"></script>
@@ -75,7 +74,7 @@
 			</ul>
 		</div>
 </div>
-	<div class="block_one">
+	<div class="block_one" style="background-image: url(img/banner.png);">
 		<div class="wrapper block_one_container">
 			<div class="block_one_text">
 				Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!
@@ -179,7 +178,7 @@
 		</div>
 	</div>
 	
-	<div class="block_five">
+	<div class="block_five" style="background-image: url(img/bg_what_you_get.png);">
 		<div class="wrapper block_five_container">
 			<h3 class="main_content_head">Что Вы получаете?</h3>
 			<div class="block_five_text_container">
