--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -36,7 +36,7 @@
 	</div>
 </header>
 <main>
-<div class="banner_static"><img src="img/Банер2.0.jpg"></div>
+<div class="banner_static"><img src="img/Банер3.0.jpg"></div>
 	<section id="slider" class="container">
 		<div class="slider-wrapper">
 		<div class="slide current-slide first_slide ">
@@ -53,13 +53,13 @@
 	</section>
 	<div class="sub_slider">
 		<ul class="sub_slider-wrapper fadeslider">
-			<li class="slide sub_slider_item animated slideInDown">Обработка Программы Лояльности Вашей сети!</li>
-			<li class="slide sub_slider_item animated slideInDown">Создание базы данных клиентов и обработка анкет!</li>
+			<li class="slide sub_slider_item animated slideInDown">Обработка <span>Программы Лояльности</span> Вашей сети!</li>
+			<li class="slide sub_slider_item animated slideInDown">Создание <span>базы данных</span> клиентов и обработка анкет!</li>
 		</ul>
 	</div>	
 	<div class="main_content">
 		<div class="wrapper main_container">
-			<div class="main_content_text">
+			<div class="main_content_text main_content_container">
 				<h3 class="main_content_head">Украинская Архивная Компания</h3>
 				<div class="main_content_item">Является многопрофильным специализированным предприятием, которое профессионально занимается обработкой и сохранением документации в соответствии со стандартами и нормами законодательства. За 7 лет работы компания заняла лидирующие позиции в сферах архивации документов, хранения документов, уничтожения документов, оцифровки документации и создании электронных баз данных и документов.</div>
 			</div>
@@ -86,7 +86,7 @@
 		<div class="wrapper block_two">
 			<div class="main_content_text">
 				<h3 class="main_content_head">Что мы делаем?</h3>
-				<div class="main_content_item">Украинская Архивная Компания решает «под ключ» задачу сбора и обработки маркетинговой информации программ лояльности торговых сетей и любых иных предприятий, собирающих персональные данные своих клиентов.</div>
+				<div class="main_content_item"><span>Украинская Архивная Компания</span> решает «под ключ» задачу сбора и обработки маркетинговой информации программ лояльности торговых сетей и любых иных предприятий, собирающих персональные данные своих клиентов.</div>
 			</div>
 		</div>
 	</div>
@@ -214,21 +214,21 @@
 		<div class="wrapper clearfix block_seven_container">
 			<h3 class="main_content_head">Пример реализации проекта</h3>
 			<div class="block_seven_client">
-				<div class="block_seven_icon"><img src="img/man.png"></div>
+				<div class="block_seven_icon"><img src="img/man_blue.png"></div>
 				<div class="block_seven_client_text">
 					<h3 class="block_seven_head">Клиент</h3>
 					<div class="block_seven_text">Сеть магазинов модной одежды “COLINS”</div>
 				</div>
 			</div>
 			<div class="block_seven_task">
-				<div class="block_seven_icon"><img src="img/question.png"></div>
+				<div class="block_seven_icon"><img src="img/question_blue.png"></div>
 				<div class="block_seven_task_text">
 					<h3 class="block_seven_head">Задача</h3>
 					<div class="block_seven_text">Организация сбора анкет программы лояльности сети и предоставление готовой базы персональных данных клиентов для дальнейшей обработки.</div>
 				</div>
 			</div>
 			<div class="block_seven_solution">
-				<div class="block_seven_icon"><img src="img/attention.png"></div>
+				<div class="block_seven_icon"><img src="img/attention_blue.png"></div>
 				<div class="block_seven_solution_text">
 					<h3 class="block_seven_head">Решение</h3>
 					<div class="block_seven_text">Сокращение затрат клиента на сбор, обработку и дальнейшее хранение анкет программ лояльности. Оптимизация бизнес-процессов внутри компании, ускорение получения готовых данных для дальнейшей работы, высвобождение собственного персонала, повышение качества данных за счет профессионального ввода и создания базы</div>
@@ -261,7 +261,7 @@
 			</ul>
 		</div>
 	</div>
-	<div class="block_nine">
+	<div class="block_nine" style="background-image: url(img/block_nine.png);">
 		<div class="wrapper block_nine_wrapper">
 			<h3 class="reviews_head">Отзывы наших клиентов</h3>
 			
@@ -281,7 +281,7 @@
 	<div class="wrapper footer_container clearfix" id="footer">
 		<div class="col_one">
 			<img src="img/Logo_UAC_white.png">
-			<div class="col_one_text">Украинская Архивная Компания решает «под ключ» задачу сбора и обработки маркетинговой информации программ лояльности торговых сетей и любых иных предприятий, собирающих персональные данные своих клиентов.</div>
+			<div class="col_one_text"><span>Украинская Архивная Компания</span> решает «под ключ» задачу сбора и обработки маркетинговой информации программ лояльности торговых сетей и любых иных предприятий, собирающих персональные данные своих клиентов.</div>
 		</div>
 		<div class="col_two clearfix">
 			<ul class="contacts clearfix">
