--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -168,6 +168,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="line block_three_line"></div>
 	<div class="block_four clearfix">
 		<div class="block_four_sub">
 			<img src="img/banner_first.jpg">
@@ -195,7 +196,7 @@
 	<div class="block_six">
 		<div class="wrapper clearfix block_six_container">
 			<div class="download_file">
-			<h3 class="block_six_head">Cкачка pdf файла</h3>
+			<h3 class="block_six_head">Скачайте наши брошюри</h3>
 				<ul>
 					<li class="download_file_item"><a href="#"><img src="img/file1.png"></a></li>
 					<li class="download_file_item"><a href="#"><img src="img/file2.png"></a></li>
@@ -255,6 +256,7 @@
 				<li class="card_item"><img src="img/card12.png"></li>
 				<li class="card_item"><img src="img/card13.png"></li>
 				<li class="card_item"><img src="img/card14.png"></li>
+				<li class="card_item"></li>
 				<!-- <li class="card_item"><img src="img/card15.png"></li>
 				<li class="card_item"><img src="img/card16.png"></li>
 				<li class="card_item"><img src="img/card17.png"></li> -->
@@ -290,8 +292,8 @@
 				<li class="contacts_item"><img class="contacts_item_icon" src="img/mail_white.png">info@uac-archive.com.ua</li>
 			</ul>
 			<ul class="soc_icon">
-				<li class="soc_icon_item"><a class="soc_icon_link" href="#"><img src="img/fb.png"></a></li>
-				<li class="soc_icon_item"><a class="soc_icon_link" href="#"><img src="img/linkedin.png"></a></li>
+				<li class="soc_icon_item"><a class="soc_icon_link" href="https://www.facebook.com/Ukrainian.Archive.Company"><img src="img/fb.png"></a></li>
+				<li class="soc_icon_item"><a class="soc_icon_link" href="https://www.linkedin.com/company/2671335?trk=NUS_CMPY_TWIT"><img src="img/linkedin.png"></a></li>
 			</ul>
 		</div>
 		<div class="col_three">
