--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -68,8 +68,8 @@
 <div class="sub-carousel sub-carousel_container">
 		<div class="carousel_container">
 			<ul class="carousel_container_list clearfix">
-				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.hranenie.com.ua/index.php/ru/"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.spisanie.com.ua"><img src="img/Adidas_original_purple.png"></a></li>
+				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.scandata.com.ua"><img src="img/Банер315x175,3.jpg"></a></li>
+				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.spisanie.com.ua"><img src="img/Банер315x175,2.jpg"></a></li>
 				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.scandata.com.ua"><img src="img/Adidas_original_red.png"></a></li>
 			</ul>
 		</div>
