--- a/ukrainian_archive_company/index.html
+++ b/ukrainian_archive_company/index.html
@@ -70,7 +70,7 @@
 			<ul class="carousel_container_list clearfix">
 				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.scandata.com.ua"><img src="img/Банер315x175,3.jpg"></a></li>
 				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.spisanie.com.ua"><img src="img/Банер315x175,2.jpg"></a></li>
-				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.scandata.com.ua"><img src="img/Adidas_original_red.png"></a></li>
+				<li class="carousel_container_item"><a class="carousel_container_link" href="http://www.hranenie.com.ua"><img src="img/Банер315x175с лого.jpg"></a></li>
 			</ul>
 		</div>
 </div>
